--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,23 @@
-.App {
-  text-align: center;
+ul {
+  display: flex; 
+  list-style-type: none;
+  flex-wrap: wrap; 
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.cat {
+  width: 500px; 
+  height: 500px; 
+  position: relative; 
+  filter: brightness(0.4); 
+  transition: all .3s ease; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.cat:hover {
+  filter: brightness(1); 
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cat__image {
+  height: 100%; 
+  width: 100%; 
+  background-size: cover; 
 }
