--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ ul {
 
 header {
   display: flex; 
+  flex-direction: column; 
   align-items: center; 
   justify-content: space-between;
   padding: 32px; 
