--- a/src/App.css
+++ b/src/App.css
@@ -65,3 +65,10 @@ header h1 {
 header div {
   cursor: pointer; 
 }
+
+.container {
+  display: flex; 
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
