--- a/src/App.css
+++ b/src/App.css
@@ -66,9 +66,15 @@ header div {
   cursor: pointer; 
 }
 
-.container {
+.search-container {
   display: flex; 
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+.cat-container {
+  display: grid; 
+  grid: 400px/auto auto auto;  
+  gap: 30px; 
 }
