--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+
 ul {
   display: flex; 
   list-style-type: none;
@@ -71,6 +72,7 @@ header div {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  color: white;
 }
 
 .cat-container {
